tests/ValidPrograms/Test13/test13.c
int main(){
	int a=0;
    int i;
	for(i=0; i<10; i=i+1){
		a=a+i;
	}
	return a;
}
