tests/SyntaxError/Test24/test24.c
int main (){

int c='ab';
return 0;
}
